# openai_usage_logger

./: .gitignore  LICENSE.md  README.md  openai_costs_logger.py  pyproject.toml  setup.py
.github/workflows/: ci.yaml
openai_costs_logger/: __init__.py  openai_costs_logger.py
openai_usage_logger/: __init__.py  openai_usage_logger.py
tests/: test_unit.py
