[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai_costs_logger"
version = "0.1.1"
description = "A utility for logging OpenAI API usage and costs."
readme = "README.md"
authors = [
    { name = "Tal Darom", email = "tal.darom@gmail.com" }
]
license = { file = "LICENSE.md" }
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Bug Tracker" = "https://github.com/talda/openai-costs-logger/issues"

